examples/exceptions.grav
// exceptions.grav — try / catch / throw / finally.
//
// `throw` raises a class instance; `try { } catch (e: Type) { }` catches it (by
// the static type or any subclass); `finally { }` runs on both the normal and the
// handled path. Lowers to a setjmp/longjmp runtime — an uncaught exception prints
// a message and exits. A subclass is caught by a base-type `catch`.

class AppError {
    public msg: string
    constructor(m: string) { self.msg = m; }
}

class NotFound extends AppError {
    constructor(m: string) { self.msg = m; }
}

fn lookup(id: int) -> string {
    if (id < 0) { throw new AppError("invalid id"); }
    if (id == 0) { throw new NotFound("no such id"); }
    return "item-${id}";
}

fn main() {
    try {
        print(lookup(7));                  // item-7
        print(lookup(-1));                 // throws AppError
    } catch (e: AppError) {
        print("error: ${e.msg}");          // error: invalid id
    } finally {
        print("done looking up");          // done looking up
    }

    // a subclass (NotFound) is caught by its base type (AppError)
    try {
        let _ = lookup(0);
    } catch (e: AppError) {
        print("caught: ${e.msg}");         // caught: no such id
    }

    // nested: a finally-only try rethrows to the outer catch
    try {
        try {
            throw new NotFound("deep");
        } finally {
            print("inner finally");        // inner finally
        }
    } catch (e: NotFound) {
        print("outer: ${e.msg}");          // outer: deep
    }
}
